--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "firegram",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "v14.19.2",
+    "npm": "6.14.17"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
